--- a/InvestmentBuilderClient/InvestmentBuilderClient.csproj
+++ b/InvestmentBuilderClient/InvestmentBuilderClient.csproj
@@ -64,6 +64,12 @@
     <Compile Include="View\AddMember.Designer.cs">
       <DependentUpon>AddMember.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\AddRedemptionView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddRedemptionView.Designer.cs">
+      <DependentUpon>AddRedemptionView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\AddTradeView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,7 +94,6 @@
     <Compile Include="View\CashAccountView.Designer.cs">
       <DependentUpon>CashAccountView.cs</DependentUpon>
     </Compile>
-    <Compile Include="ViewModel\CashAccountViewModel.cs" />
     <Compile Include="View\ConfigurationView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,7 +123,6 @@
     <Compile Include="View\PaymentsDataView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ViewModel\PaymentsDataViewModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\PerformanceChartView.cs">
@@ -136,13 +140,21 @@
     <Compile Include="View\ReceiptDataView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ViewModel\ReceiptDataViewModel.cs" />
     <Compile Include="ViewModel\TradeViewModel.cs" />
+    <Compile Include="View\RedemptionsView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\RedemptionsView.Designer.cs">
+      <DependentUpon>RedemptionsView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\AddIndexView.resx">
       <DependentUpon>AddIndexView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\AddMember.resx">
       <DependentUpon>AddMember.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AddRedemptionView.resx">
+      <DependentUpon>AddRedemptionView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\AddTradeView.resx">
       <DependentUpon>AddTradeView.cs</DependentUpon>
@@ -182,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\PortfolioView.resx">
       <DependentUpon>PortfolioView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\RedemptionsView.resx">
+      <DependentUpon>RedemptionsView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
