--- a/InvestmentBuilderClient/InvestmentBuilderClient.csproj
+++ b/InvestmentBuilderClient/InvestmentBuilderClient.csproj
@@ -223,6 +223,10 @@
       <Project>{9fa7e2cc-b5c6-463b-856a-e0e21eff93e4}</Project>
       <Name>InvestmentBuilderLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InvestmentReportGenerator\InvestmentReportGenerator.csproj">
+      <Project>{67e92f66-3a85-4122-8d1e-dcfd499c64bf}</Project>
+      <Name>InvestmentReportGenerator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MarketDataServices\MarketDataServices.csproj">
       <Project>{13bae8cd-2876-44c4-a39a-74f7313fba80}</Project>
       <Name>MarketDataServices</Name>
