serialise cached historical data. expand testdataslurce to use previoulsy cached data

--- a/InvestmentBuilderClient/InvestmentBuilderClient.csproj
+++ b/InvestmentBuilderClient/InvestmentBuilderClient.csproj
@@ -252,9 +252,7 @@
     <Content Include="InvestmentBuilderConfig.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestMarketData.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="TestMarketData.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
