--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
@@ -48,6 +48,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\bin\Debug\InvestmentBuilderLib.dll</HintPath>
     </Reference>
+    <Reference Include="InvestmentReportGenerator">
+      <HintPath>..\..\bin\Debug\InvestmentReportGenerator.dll</HintPath>
+    </Reference>
     <Reference Include="MarketDataServices, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\bin\Debug\MarketDataServices.dll</HintPath>
@@ -322,13 +325,14 @@
     <Content Include="Views\InvestmentRecord\AddTransaction.cshtml" />
     <Content Include="Views\InvestmentRecord\Parameters.cshtml" />
     <Content Include="Views\InvestmentRecord\View.cshtml" />
-    <Content Include="Views\InvestmentRecord\Performance.cshtml" />
+    <Content Include="Views\InvestmentRecord\Reports.cshtml" />
     <Content Include="Views\InvestmentRecord\ValuationReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="DTOs\" />
     <Folder Include="Storage\" />
+    <Folder Include="Utils\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
