added new datasource - BarChart data. refactored MarketDataServices library to be more testable

--- a/MarketDataServices/MarketDataServices.csproj
+++ b/MarketDataServices/MarketDataServices.csproj
@@ -62,14 +62,17 @@
     <Compile Include="AggregatedMarketDataSource.cs" />
     <Compile Include="BarChartMarketDataSource.cs" />
     <Compile Include="CachedMarketDataSource.cs" />
+    <Compile Include="IMarketDataSerialiser.cs" />
     <Compile Include="IMarketDataSource.cs" />
+    <Compile Include="IMarketSourceLocator.cs" />
+    <Compile Include="MarketDataFileSerialiser.cs" />
     <Compile Include="MarketDataService.cs" />
+    <Compile Include="MefMarketSourceLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuandlMarketDataSource.cs" />
     <Compile Include="TestFileMarketDataSource.cs" />
     <Compile Include="WebDataHandler.cs" />
     <Compile Include="YahooMarketDataSource.cs" />
-    <Compile Include="YahooMarketDataSourceOld.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
