--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
@@ -313,7 +313,7 @@
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Phone.cshtml" />
     <Content Include="Views\InvestmentRecord\Index.cshtml" />
-    <Content Include="Views\InvestmentRecord\Create.cshtml" />
+    <Content Include="Views\InvestmentRecord\CreateTrade.cshtml" />
     <Content Include="Views\InvestmentRecord\CashFlow.cshtml" />
     <Content Include="Views\Shared\_LayoutInvestmentRecord.cshtml" />
     <Content Include="Views\Sample\PartialViewDemo.cshtml" />
@@ -322,7 +322,7 @@
     <Content Include="Views\Sample\Index.cshtml" />
     <Content Include="Views\Example\Index.cshtml" />
     <Content Include="Views\Shared\AccountPartial.cshtml" />
-    <Content Include="Views\InvestmentRecord\Edit.cshtml" />
+    <Content Include="Views\InvestmentRecord\EditTrade.cshtml" />
     <Content Include="Views\InvestmentRecord\AddTransaction.cshtml" />
     <Content Include="Views\InvestmentRecord\Parameters.cshtml" />
     <Content Include="Views\InvestmentRecord\View.cshtml" />
@@ -331,7 +331,7 @@
     <Content Include="Views\InvestmentRecord\AccountSummary.cshtml" />
     <Content Include="Views\InvestmentRecord\ReceiptCashFlowItem.cshtml" />
     <Content Include="Views\InvestmentRecord\PaymentCashFlowItem.cshtml" />
-    <Content Include="Views\InvestmentRecord\AddTransactionModal.cshtml" />
+    <Content Include="Views\InvestmentRecord\AddModalDialog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
