--- a/InvestmentBuilderLib/InvestmentBuilderLib.csproj
+++ b/InvestmentBuilderLib/InvestmentBuilderLib.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountManager.cs" />
     <Compile Include="BrokerManager.cs" />
     <Compile Include="CashAccountTransactionManager.cs" />
     <Compile Include="InvestmentBuilder.cs" />
