--- a/InvestmentBuilderMSTests/InvestmentBuilderMSTests.csproj
+++ b/InvestmentBuilderMSTests/InvestmentBuilderMSTests.csproj
@@ -58,6 +58,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AccountManagerTests.cs" />
     <Compile Include="AggregatedMarketDataServiceTests.cs" />
     <Compile Include="AuthorisationTests.cs" />
     <Compile Include="BrokerManagerTests.cs" />
