--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Web.config
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" 
@@ -78,4 +79,18 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="C:\Logs\InvestmentBuilder\InvestmentBuilder.log"></target>
+      <!--${logger}.txt-->
+      <target name="viewLogger" xsi:type="MethodCall" className="InvestmentBuilderWeb.Controllers.InvestmentBaseController, InvestmentBuilderWeb" methodName="LogMethod">
+        <parameter layout="${level}" />
+        <parameter layout="${message}" />
+      </target>
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="fileLogger"></logger>
+      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="viewLogger"></logger>
+    </rules>
+  </nlog> 
 </configuration>
