--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
@@ -71,6 +71,10 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\NLog.4.3.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="PerformanceBuilderLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\bin\Debug\PerformanceBuilderLib.dll</HintPath>
@@ -204,6 +208,8 @@
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InvestmentAccountController.cs" />
+    <Compile Include="Controllers\InvestmentBaseController.cs" />
     <Compile Include="Controllers\InvestmentRecordController.cs" />
     <Compile Include="Controllers\ItineraryController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -334,8 +340,11 @@
     <Content Include="Views\InvestmentRecord\ReceiptCashFlowItem.cshtml" />
     <Content Include="Views\InvestmentRecord\PaymentCashFlowItem.cshtml" />
     <Content Include="Views\InvestmentRecord\AddModalDialog.cshtml" />
-    <Content Include="Views\InvestmentRecord\ManageAccounts.cshtml" />
+    <Content Include="Views\InvestmentAccount\EditAccount.cshtml" />
     <Content Include="Views\Shared\_LoginPartialTestUser.cshtml" />
+    <Content Include="Views\InvestmentAccount\AddAccount.cshtml" />
+    <Content Include="Views\InvestmentAccount\AddAccountMembers.cshtml" />
+    <Content Include="Views\InvestmentRecord\RaiseAlert.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
