--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/packages.config
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/packages.config
@@ -35,4 +35,5 @@
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="Wrox.ProMvc5.Views.SpecifyingViews" version="1.0.0" targetFramework="net45" />
+  <package id="NLog" version="4.3.0" targetFramework="net45" />
 </packages>
