--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Web.config
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Web.config
@@ -10,8 +10,7 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" 
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20150520061928.mdf;Initial Catalog=aspnet-WebApp-20150520061928;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20150520061928.mdf;Initial Catalog=aspnet-WebApp-20150520061928;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
