--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/packages.config
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angularjs" version="1.6.1" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
@@ -28,6 +29,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="NLog" version="4.3.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
@@ -35,5 +37,4 @@
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="Wrox.ProMvc5.Views.SpecifyingViews" version="1.0.0" targetFramework="net45" />
-  <package id="NLog" version="4.3.0" targetFramework="net45" />
 </packages>
