--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Web.config
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Web.config
@@ -82,7 +82,7 @@
     <targets>
       <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="C:\Logs\InvestmentBuilder\InvestmentBuilder.log"></target>
       <!--${logger}.txt-->
-      <target name="viewLogger" xsi:type="MethodCall" className="InvestmentBuilderWeb.Controllers.InvestmentBaseController, InvestmentBuilderWeb" methodName="LogMethod">
+      <target name="viewLogger" xsi:type="MethodCall" className="InvestmentBuilderWeb.Utils.BuildReportMonitor, InvestmentBuilderWeb" methodName="LogMethod">
         <parameter layout="${level}" />
         <parameter layout="${message}" />
       </target>
