--- a/InvestmentBuilderMSTests/InvestmentBuilderMSTests.csproj
+++ b/InvestmentBuilderMSTests/InvestmentBuilderMSTests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="TestClasses.cs" />
     <Compile Include="TestDataReader.cs" />
     <Compile Include="TestMarketDataSource.cs" />
+    <Compile Include="TestProgressCounter.cs" />
     <Compile Include="TradeLoaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtilityTests.cs" />
