improvements to charting in pdf report.

--- a/InvestmentBuilderCore/InvestmentBuilderCore.csproj
+++ b/InvestmentBuilderCore/InvestmentBuilderCore.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ConfigurationSettings.cs" />
     <Compile Include="ContainerManager.cs" />
     <Compile Include="DataLayerContracts.cs" />
+    <Compile Include="DatasetNormaliser.cs" />
     <Compile Include="IDataLayer.cs" />
     <Compile Include="IInvestmentReportWriter.cs" />
     <Compile Include="IndexData.cs" />
