converted portoflio view to angular. introduced ag-grid

--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/InvestmentBuilderWeb.csproj
@@ -240,6 +240,12 @@
     <Compile Include="Utils\BuildReportMonitor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\ag-Grid\ag-grid.css" />
+    <Content Include="Content\ag-Grid\theme-blue.css" />
+    <Content Include="Content\ag-Grid\theme-bootstrap.css" />
+    <Content Include="Content\ag-Grid\theme-dark.css" />
+    <Content Include="Content\ag-Grid\theme-fresh.css" />
+    <Content Include="Content\ag-Grid\theme-material.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\calendar.png" />
@@ -256,6 +262,8 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="InvestmentBuilderWebConfig.xml" />
+    <Content Include="Scripts\ag-Grid\ag-grid.js" />
+    <Content Include="Scripts\ag-Grid\ag-grid.min.js" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -317,7 +325,11 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\MyApp\DemoCode.js" />
+    <Content Include="Scripts\MyApp\Index.js" />
     <Content Include="Scripts\MyApp\InvestmentAccount.js" />
+    <Content Include="Scripts\MyApp\Portfolio.js" />
+    <Content Include="Scripts\MyApp\RegisterModules.js" />
+    <Content Include="Scripts\MyApp\Utils.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\ui-bootstrap-tpls-2.5.0.js" />
@@ -390,6 +402,10 @@
     <Content Include="Views\InvestmentRecord\CashFlow.cshtml" />
     <Content Include="Views\InvestmentRecord\AddTransaction.cshtml" />
     <Content Include="Views\InvestmentRecord\ReportCompletion.cshtml" />
+    <Content Include="Views\InvestmentRecord\IndexAngular.cshtml" />
+    <Content Include="Views\InvestmentRecord\TestPage.cshtml" />
+    <Content Include="Views\InvestmentRecord\EditTradeAngular.cshtml" />
+    <Content Include="Views\InvestmentRecord\YesNoChooser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -436,7 +452,7 @@
   <PropertyGroup>
     <PostBuildEvent>mkdir %25APPDATA%25\InvestmentRecordBuilder
 copy $(ProjectDir)InvestmentBuilderWebConfig.xml %25APPDATA%25\InvestmentRecordBuilder
-copy $(ProjectDir)TestMarketData.txt %25APPDATA%25\InvestmentRecordBuilder</PostBuildEvent>
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
