added more functional tests as well as a new database rebuild script

--- a/MarketDataServices/MarketDataServices.csproj
+++ b/MarketDataServices/MarketDataServices.csproj
@@ -75,6 +75,7 @@
     <Compile Include="TestFileMarketDataSource.cs" />
     <Compile Include="WebMarketDataReader.cs" />
     <Compile Include="YahooMarketDataSource.cs" />
+    <Compile Include="YahooMarketDataSourceOld.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
