--- a/InvestmentBuilderMSTests/InvestmentBuilderMSTests.csproj
+++ b/InvestmentBuilderMSTests/InvestmentBuilderMSTests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="CachedMarketDataServiceTests.cs" />
     <Compile Include="CashAccountTests.cs" />
     <Compile Include="CurrentInvestmentTests.cs" />
+    <Compile Include="FullFunctionalTests.cs" />
     <Compile Include="FullInvestmentBuilderTests.cs" />
     <Compile Include="InvestmentBuilderTests.cs" />
     <Compile Include="InvestmentRecordTests.cs" />
